fixed the dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
   color-scheme: light dark;
   scroll-behavior: smooth;
   transition: all .5s ease;
-  background-color: #000000;
+  background-color: white;
 }
